--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ server.port=8295
 spring.data.mongodb.database=testDB11
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
-spring.data.mongodb.uri=mongodb://172.23.239.65:27017/testDB
+spring.data.mongodb.uri=mongodb://localhost:27017/testDB
 #
 ## App config
 spring.application.name=BootMongo
